# BitVMX-CPU

./: .gitignore  README.md
.github/workflows/: rust.yml
docs/guide/: bitvmx-core-concepts.md  bitvmx-dynamic-input-test-results.md  checkpoint-system-guide.md  complete-bitvmx-guide.md  file-usage-guide.md
docs/service/: scaling-hash-management.md
emulator/checkpoints/: challenge_log.json  command.txt
emulator/src/: main.rs
emulator/tests/: README.md  test_bitvmx_one_way_option.rs
poc/example/: Cargo.toml  Makefile  linker.ld  my_function.yaml
poc/example/bitcoin_scripts/: challenge.script  execution_summary.script  p2tr_commit.script  rom_commitment.script
poc/example/results/: calculation_result.txt  example_report.md  final_hash.txt  workflow_report.md
poc/example/scripts/: bitvmx_workflow.sh  run_example.sh
poc/example/src/: lib.rs  my_function.rs  start.S
poc/one_way_option/: Cargo.toml  Makefile  README.md  linker.ld  one_way_option.yaml
poc/one_way_option/.cargo/: config.toml
poc/one_way_option/bitcoin_scripts/: challenge.script  challenge_fixed.script  execution_summary.script  p2tr_commit.script  p2tr_commit_fixed.script
poc/one_way_option/results/: bitvmx_option_report.md  final_hash.txt  hash_chain.txt  hash_verification.txt  option_results.json
poc/one_way_option/scripts/: bitvmx_option.sh  quick_start.sh  tutorial.sh  verify.sh
poc/one_way_option/src/: lib.rs  one_way_option.rs  start.S
