[package]
name = "one_way_option"
version = "0.1.0"
edition = "2021"

# 독립적인 프로젝트로 설정
[workspace]

# BitVM(X) 바이너리 정의
[[bin]]
name = "one_way_option"
path = "src/one_way_option.rs"

[dependencies]
# BitVM(X)에서는 no_std 환경이므로 의존성 없음

[profile.release]
# 최적화 설정
opt-level = "s"         # 크기 최적화
lto = true             # 링크 타임 최적화
codegen-units = 1      # 단일 코드젠 유닛
panic = "abort"        # 패닉 시 중단
strip = true           # 디버그 정보 제거

[profile.dev]
# 개발용 설정
opt-level = 1          # 약간의 최적화
debug = true           # 디버그 정보 포함
panic = "abort"        # 패닉 시 중단

# no_std 환경 설정
[lib]
name = "one_way_option_lib"
path = "src/lib.rs" 